add error notice

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 <input type="text" class="form-control" data-bind="textInput:filterContent" placeholder="Where do u want to know?">
                 <button class="btn btn-primary" data-bind="click:filter">Filter</button>
             </div>
+            <div class="errorMessage" data-bind="visible: networkError">
+                May be met the network trouble,please try again later.
+            </div>
             <div class="slidebar-content" data-bind="foreach: locations">
                 <div class="location" data-bind="text: name,click:$parent.click">
                 </div>
@@ -54,7 +57,7 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/knockout-3.4.1.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWWkV65FigC7jAODidfgmUgzF72cJFL8E&callback=initMap">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWWkV65FigC7jAODidfgmUgzF72cJFL8E&callback=initMap" onerror="initMapError()">
     </script>
 </body>
 
